--- a/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
+++ b/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
@@ -64,6 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BFS.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
