--- a/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
+++ b/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
@@ -66,7 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BFS.cs" />
+    <Compile Include="BreadthPathFinder.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
