--- a/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
+++ b/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
@@ -58,23 +58,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BreadthPathFinder.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Constants\ErrorMessages.cs" />
+    <Compile Include="Constants\PointRelation.cs" />
+    <Compile Include="Model\AdjacencyMatrix.cs" />
+    <Compile Include="Model\BreadthPathFinder.cs" />
+    <Compile Include="Model\Line.cs" />
+    <Compile Include="Model\Point.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdjacencyMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -101,10 +100,24 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Extensions" />
+    <Folder Include="Interfaces" />
     <Folder Include="Resources\" />
+    <Folder Include="ViewModel" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="close.ico" />
+    <Content Include="..\README.md">
+      <Link>README.md</Link>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="View\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\close.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
