--- a/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
+++ b/NonCrossingLinesDrawer/NonCrossingLinesDrawer.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Abstractions\PointPath.cs" />
     <Compile Include="Constants\ErrorMessages.cs" />
     <Compile Include="Constants\PointRelation.cs" />
+    <Compile Include="Exceptions\NoPathException.cs" />
+    <Compile Include="Extensions\CanvasExtensions.cs" />
     <Compile Include="Interfaces\IAdjacencyMatrix.cs" />
     <Compile Include="Interfaces\IBreadthPathFinder.cs" />
     <Compile Include="Interfaces\ILine.cs" />
@@ -70,7 +72,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="View\MainWindow.xaml.cs">
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -101,18 +103,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions" />
-    <Folder Include="Resources\" />
-    <Folder Include="ViewModel" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="..\README.md">
       <Link>README.md</Link>
     </Content>
+    <Resource Include="close.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="View\MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
